tests/ui/unterminated_string.stderr
Error [E0002]: this text never gets a closing quote
  --> tests/ui/unterminated_string.jet:2:11
    |
  2 |     print("hello)
    |           ^^^^^^^
 Why: a piece of text must start and end with a `"` on the same line
 Fix: add a closing `"` before the end of the line
